# postgres-mcp

./: .env.example  .env.template  .gitignore  CLAUDE.md  EXTERNAL_DATABASE_GUIDE.md  PLAN.md  README.md  TASKS.md  TEST_QUESTIONS.md  create_cmdb_database.sql  insert_sample_data.sql  postgres_mcp_server.py  pyproject.toml  requirements.txt  setup_postgresql_wsl.sh  streamlit_openai_mcp.py  streamlit_openai_mcp_fixed.py  test_cmdb_queries.py  test_mcp_compatibility.py  test_structured_schemas.py  verify_setup.py
documentation/: ARCHITECTURE.md  CONFIGURATION_EXAMPLES.md  DB_SCHEMA.md  EXTERNAL_DATABASE.md  MCP_CLIENT.md  MCP_SERVER.md  RUNBOOK.md  SECURITY.md
